--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,7 @@
     <string name="menu_gallery">Gallery</string>
     <string name="menu_slideshow">Slideshow</string>
     <string name="next">Next</string>
+    <string name="navigation">Navigation</string>
+    <string name="my_location">My Location</string>
+    <string name="tittle_home">GPS Navigation</string>
 </resources>
